# MoVIER-India-Innovates-2026

./: README.md
config/: slam_toolbox.yaml  slam_toolbox2.yaml  xorg.conf
experiments/: frames_2026-02-27_02.59.57.gv  frames_2026-03-03_13.12.10.gv  frames_2026-03-03_13.21.57.gv  frames_2026-03-03_13.31.59.gv  my_room_map.data
firmware/main/: encoderFeedback.hpp  imu.hpp  main.ino  network.hpp  packet.hpp  serial.hpp  wheel.hpp
src/bot_control/: CMakeLists.txt  package.xml
src/bot_control/config/: bridge.yaml  controllers.yaml
src/bot_control/launch/: spawn.launch.py  view.launch.py
src/bot_control/models/: robot.urdf.xacro  ros2_control.xacro
src/bot_control/src/: cmd_vel_parser.cpp
src/bot_control/worlds/: empty_world.sdf  slam_test1.sdf
src/bot_description/: CMakeLists.txt  package.xml
src/bot_description/launch/: rsp.launch.py  view.launch.py
src/bot_description/models/: core.xacro  robot.urdf.xacro
src/bot_description/models/include/: camera.xacro  caster.xacro  chassis.xacro  imu.xacro  lidar.xacro  wheel.xacro
src/bot_description/rviz/: view.rviz
src/bot_slam/: CMakeLists.txt  package.xml
src/bot_slam/config/: costmap.yaml  localisation.lua  mapping.lua  planner.yaml
src/bot_slam/launch/: localisation.launch.py  mapping.launch.py
src/bot_slam/map/: map.pbstream
src/project-x_diffBot_controller/: CMakeLists.txt  package.xml  projx_control.xml
src/project-x_diffBot_controller/config/: controller_config.yaml
src/project-x_diffBot_controller/description/: complete_robot.xacro  diffbot_view.rviz  robot.urdf  ros_control_hardware.xacro
src/project-x_diffBot_controller/description/assets/: 18a_100d_32_tpu_02.part  18a_100d_32_tpu_02.stl  18a_100d_32_tpu_03.part  18a_100d_32_tpu_03.stl  18a_100d_32_tpu_04.part  18a_100d_32_tpu_04.stl  18a_100d_32_tpu_10.part  18a_100d_32_tpu_10.stl  extrusion.part  extrusion.stl  food_plate.part  food_plate.stl  intel_realsense_rplidar_a2_f3d.part  intel_realsense_rplidar_a2_f3d.stl  ks_10x15.part  ks_10x15.stl  part_a.part  part_a.stl  part_b.part  part_b.stl  part_c.part  part_c.stl  part_d.part  part_d.stl  part_e.part  part_e.stl  part_f.part  part_f.stl  part_g.part  part_g.stl  part_h.part  part_h.stl  part_x.part  part_x.stl  part_y.part  part_y.stl  shutdownbutton_step_1_outside_yw1b_v4_body_step_1_solid1.part  shutdownbutton_step_1_outside_yw1b_v4_body_step_1_solid1.stl  side_one.part  side_one.stl  (+4 more)
src/project-x_diffBot_controller/hardwareInterface/: projx-diffdrive.cpp
src/project-x_diffBot_controller/hardwareInterface/include/projx_control/: projx-diffdrive.hpp  protocol.hpp  serial_comm.hpp  udp_comm.hpp  visibility_control.h  wheel.hpp
src/project-x_diffBot_controller/launch/: check_urdf.launch.py  controller.launch.py
src/robot_localization-humble-devel/launch/: ekf.launch.py
src/robot_localization-humble-devel/params/: ekf1.yaml
src/ydlidar_ros2_driver/launch/: ydlidar_launch.py  ydlidar_launch_view.py
src/ydlidar_ros2_driver/params/: G2.yaml
test/: check_imu.py  comp_odom_imu.py
(+1 files in other folders)
